# PolyDeobfuscated

./: .gitconfig  .gitignore  .prettierignore  README.md  test.js
PolyTrack/: main.bundle.js
polytrack/: main.bundle.js  simulation_worker.bundle.js
polytrack-deobfuscated/: simulation_worker.bundle.js
source_maps/: main.bundle.json  simulation_worker.bundle.json
tools/imap/: .gitignore  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml
tools/imap/src/: index.ts  main.rs  types.rs  utils.rs  visitor.rs  visitors.rs
tools/nmx/: README.md  package.json
