[package]
name = "imap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
oxc_allocator = "0.72.0"
oxc_ast = "0.72.0"
oxc_ast_visit = "0.72.0"
oxc_parser = "0.72.0"
oxc_span = "0.72.0"
oxc_syntax = "0.72.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
